added fetch quotes and loader

--- a/1-quote-generator/index.html
+++ b/1-quote-generator/index.html
@@ -13,20 +13,19 @@
 
 <body>
 
-  <div class="qoute-container">
+  <div class="quote-container" id="quote-container">
     <div class="quote-text">
       <i class="fas fa-quote-left"></i>
-      <span id="quote">Hard work always pays off. Today Started 100 code of
-        js.</span>
+      <span id="quote"></span>
     </div>
 
     <div class="quote-author">
-      <span id="author">Sachin</span>
+      <span id="author"></span>
     </div>
 
     <div class="button-container">
 
-      <button class="twitter-button" title="Tweet this!">
+      <button class="twitter-button" id="twitter" title="Tweet this!">
         <i class="fab fa-twitter"></i>
       </button>
 
@@ -37,6 +36,8 @@
   </div>
 
   <!-- Script -->
+  <div class="loader" id="spinner">
+  </div>
   <script src="script.js"></script>
 </body>
 
