added functionality for selecting screen at at any time

--- a/3-picture-in-picture/index.html
+++ b/3-picture-in-picture/index.html
@@ -10,8 +10,12 @@
 
 <body>
   <video id="video" controls height="360px" width="640px" hidden></video>
-  <div class="button-container" id="button-container">
-    <button id="button">Start PIP</button>
+  <div class="button-container" id="button-container" hidden>
+    <button id="button">Enter PIP Mode</button>
+  </div>
+
+  <div class="select-screen-button-container" id="button-container">
+    <button id="select-screen-button">Select screen</button>
   </div>
 
   <script src="script.js"></script>
