created board for game

--- a/24-snake-ladder-game/index.html
+++ b/24-snake-ladder-game/index.html
@@ -12,7 +12,7 @@
       <div class="container">
         <h1>Snake Ladder Game</h1>
         <div class="winner"></div>
-        <div class="grid-container">
+        <div class="grid-container" id="grid-container">
             
         </div>
         <button class="restart-button" >Restart Game</button>
