--- a/24-snake-ladder-game/index.html
+++ b/24-snake-ladder-game/index.html
@@ -11,14 +11,14 @@
     <div class="main-container">
       <div class="game-container">
         <div class="header">
-          <h1>Snake Ladder Game</h1>
+          <h2 id="player-turn">Player 1</h2>
           <div class="btn-container">
-            <button class="restart-button">Restart Game</button>
+            <!-- <button class="restart-button">Restart Game</button> -->
             <button class="roll-dice-btn" id="roll-dice-btn">Roll Dice</button>
           </div>
           <div class="winner"></div>
         </div>
-        <div class="grid-container" id="grid-container"></div>
+        <div id="board-container"></div>
       </div>
     </div>
     <script src="script.js"></script>
