--- a/24-snake-ladder-game/index.html
+++ b/24-snake-ladder-game/index.html
@@ -12,8 +12,8 @@
       <div class="game-container">
         <div class="header">
           <h2 id="player-turn">Player 1</h2>
+          <div id="dice-container"></div>
           <div class="btn-container">
-            <!-- <button class="restart-button">Restart Game</button> -->
             <button class="roll-dice-btn" id="roll-dice-btn">Roll Dice</button>
           </div>
           <div class="winner"></div>
