added winner logic

--- a/24-snake-ladder-game/index.html
+++ b/24-snake-ladder-game/index.html
@@ -13,6 +13,7 @@
         <div class="header">
           <h2 id="player-turn">Player 1</h2>
           <div id="dice-container"></div>
+          <div id="winner-container"></div>
           <div class="btn-container">
             <button class="roll-dice-btn" id="roll-dice-btn">Roll Dice</button>
           </div>
