email client design and showing content

--- a/25-email-client/index.html
+++ b/25-email-client/index.html
@@ -10,7 +10,17 @@
   <body>
     <div class="main-container">
       <h1>Email Client</h1>
-      <div class="container"></div>
+      <div class="email-container">
+        <div class="left-nav">
+          <ul>
+            <li class="active">Inbox</li>
+            <li>Starred</li>
+            <li>Sent</li>
+          </ul>
+        </div>
+        <div class="email-list" id="email-list"></div>
+        <div class="main-section" id="main-section"></div>
+      </div>
     </div>
     <script src="script.js"></script>
   </body>
