added starred email functionality

--- a/25-email-client/index.html
+++ b/25-email-client/index.html
@@ -13,9 +13,9 @@
       <div class="email-container">
         <div class="left-nav">
           <ul>
-            <li class="active">Inbox</li>
-            <li>Starred</li>
-            <li>Sent</li>
+            <li id="inbox" class="active nav-item">Inbox</li>
+            <li id="starred" class="nav-item">Starred</li>
+            <li id="sent" class="nav-item">Sent</li>
           </ul>
         </div>
         <div class="email-list" id="email-list"></div>
