added num of read and unread mails

--- a/25-email-client/index.html
+++ b/25-email-client/index.html
@@ -18,7 +18,12 @@
             <li id="sent" class="nav-item">Sent</li>
           </ul>
         </div>
-        <div class="email-list" id="email-list"></div>
+        <div class="email-list" id="email-list">
+          <div>
+            <span id="read-mail-count"></span>
+            <span id="unread-mail-count"></span>
+          </div>
+        </div>
         <div class="main-section" id="main-section"></div>
       </div>
     </div>
