--- a/26-food-ordering/index.html
+++ b/26-food-ordering/index.html
@@ -3,29 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>tic-tac-toe'</title>
+    <title>Food Ordering</title>
     <link rel="stylesheet" href="style.css" />
   </head>
 
   <body>
     <div class="main-container">
-      <h1>Email Client</h1>
-      <div class="email-container">
-        <div class="left-nav">
-          <ul>
-            <li id="inbox" class="active nav-item">Inbox</li>
-            <li id="starred" class="nav-item">Starred</li>
-            <li id="sent" class="nav-item">Sent</li>
-          </ul>
-        </div>
-        <div class="email-list" id="email-list">
-          <div>
-            <span id="read-mail-count"></span>
-            <span id="unread-mail-count"></span>
-          </div>
-        </div>
-        <div class="main-section" id="main-section"></div>
-      </div>
+      <h1>Food Ordering App</h1>
     </div>
     <script src="script.js"></script>
   </body>
