to do list app setup

--- a/26-todo-list/index.html
+++ b/26-todo-list/index.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Food Ordering</title>
+    <title>To-Do List</title>
     <link rel="stylesheet" href="style.css" />
   </head>
 
   <body>
     <div class="main-container">
-      <h1>Food Ordering App</h1>
+      <h1>To Do list</h1>
     </div>
     <script src="script.js"></script>
   </body>
