created sections for in progress and completed tasks

--- a/26-todo-list/index.html
+++ b/26-todo-list/index.html
@@ -9,7 +9,8 @@
 
   <body>
     <div class="main-container">
-      <h1>To Do list</h1>
+      <div>InProgress Tasks</div>
+      <div>Completed Tasks</div>
     </div>
     <script src="script.js"></script>
   </body>
