created checkboxes for tasks

--- a/26-todo-list/index.html
+++ b/26-todo-list/index.html
@@ -9,8 +9,8 @@
 
   <body>
     <div class="main-container">
-      <div>InProgress Tasks</div>
-      <div>Completed Tasks</div>
+      <div id="inprogress-tasks">InProgress Tasks</div>
+      <div id="completed-tasks">Completed Tasks</div>
     </div>
     <script src="script.js"></script>
   </body>
