completed toggle tasks functionality

--- a/26-todo-list/index.html
+++ b/26-todo-list/index.html
@@ -4,13 +4,20 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>To-Do List</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="style.css" />
   </head>
 
   <body>
     <div class="main-container">
-      <div id="inprogress-tasks">InProgress Tasks</div>
-      <div id="completed-tasks">Completed Tasks</div>
+      <div class="tasks-list" id="to-do-section">To-Do List</div>
+      <div class="tasks-list" id="inprogress-section">In Progress</div>
+      <div class="tasks-list" id="completed-section">Completed Tasks</div>
     </div>
     <script src="script.js"></script>
   </body>
