--- a/27-comment-section/index.html
+++ b/27-comment-section/index.html
@@ -11,6 +11,7 @@
   <body>
     <div class="main-container">
       <h1>To Do list</h1>
+      <input placeholder="Add a comment" />
     </div>
     <script src="script.js"></script>
   </body>
