--- a/28-star-rating-component/index.html
+++ b/28-star-rating-component/index.html
@@ -9,9 +9,13 @@
   </head>
 
   <body>
-    <div class="main-container">
-      <h1>Star Rating Component</h1>
-      <input placeholder="Add a comment" />
+    <h3>Star Rating Component</h3>
+    <div id="main-container">
+      <div data-id="1" class="star"></div>
+      <div data-id="2" class="star"></div>
+      <div data-id="3" class="star"></div>
+      <div data-id="4" class="star"></div>
+      <div data-id="5" class="star"></div>
     </div>
     <script src="script.js"></script>
   </body>
